--- a/scss/main.scss
+++ b/scss/main.scss
@@ -4,7 +4,7 @@
 
 @use "../components/heroSection/scss" as heroSection;
 @use "../components/aboutMeSection/scss" as aboutMeSection;
-@use "../components/sectionPortfolio/scss" as sectionPortfolio;
+@use "../components/sectionPortfolio/scss" as projectsSection;
 @use "../components/sectionContact/scss" as sectionContact;
 
 // // Global section styles
