section hero & section about me BEM className refactor

--- a/components/aboutMeSection/scss/SocialLinks.module.scss
+++ b/components/aboutMeSection/scss/SocialLinks.module.scss
@@ -1,6 +1,6 @@
 @import "../../../scss/variables/breakpoints";
 
-.social__links {
+.about__me__content__social__links {
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
@@ -15,7 +15,7 @@
 		align-items: center;
 	}
 
-	.social__links__image {
+	&__image {
 		display: block;
 		width: 100%;
 		object-fit: cover;
