--- a/components/heroSection/scss/HeroNavigation.module.scss
+++ b/components/heroSection/scss/HeroNavigation.module.scss
@@ -1,9 +1,9 @@
-.hero__navigation {
-  margin: 0;
-  padding: 10px;
+.hero__section__content__nav__links {
+	margin: 0;
+	padding: 10px;
 
-  li {
-    display: inline-block;
-    margin: 0 5px;
-  }
+	li {
+		display: inline-block;
+		margin: 0 5px;
+	}
 }
