--- a/components/aboutMeSection/scss/Skills.module.scss
+++ b/components/aboutMeSection/scss/Skills.module.scss
@@ -1,6 +1,6 @@
 @use "./mixins" as aboutMeSection;
 
-.skills {
+.about__me__section__content__info__skills {
 	display: grid;
 	grid-template-columns: repeat(2, 1fr);
 	gap: 0.25rem;
@@ -9,20 +9,24 @@
 	li {
 		text-align: center;
 	}
-}
 
-.skills__light__theme {
-	@include aboutMeSection.skills("light__theme");
-}
+	&--light__theme {
+		@extend .about__me__section__content__info__skills;
+		@include aboutMeSection.skills("light__theme");
+	}
 
-.skills__blue__theme {
-	@include aboutMeSection.skills("blue__theme");
-}
+	&--blue__theme {
+		@extend .about__me__section__content__info__skills;
+		@include aboutMeSection.skills("blue__theme");
+	}
 
-.skills__green__theme {
-	@include aboutMeSection.skills("green__theme");
-}
+	&--green__theme {
+		@extend .about__me__section__content__info__skills;
+		@include aboutMeSection.skills("green__theme");
+	}
 
-.skills__purple__theme {
-	@include aboutMeSection.skills("purple__theme");
+	&--purple__theme {
+		@extend .about__me__section__content__info__skills;
+		@include aboutMeSection.skills("purple__theme");
+	}
 }
