--- a/components/heroSection/scss/HeroContentRight.module.scss
+++ b/components/heroSection/scss/HeroContentRight.module.scss
@@ -1,4 +1,5 @@
 @use "./mixins" as heroSection;
+@import "../../../scss/variables/breakpoints";
 
 .preview {
 	grid-area: rightColumn;
@@ -11,65 +12,119 @@
 		padding: 0;
 	}
 
-	.preview__shadow__light__theme {
-		@include heroSection.preview__shadow("light__theme");
+	&__shadow {
+		width: 300px;
+		height: 200px;
+		padding-left: 30px;
+		padding-top: 30px;
+
+		@media screen and (max-width: $large-desktop-breakpoint) {
+			height: 240px;
+			padding-left: 10px;
+			padding-top: 10px;
+			margin-bottom: 50px;
+			margin-right: 20px;
+		}
+
+		&--light__theme {
+			@extend .preview__shadow;
+			@include heroSection.preview-shadow("light__theme");
+		}
+		&--blue__theme {
+			@extend .preview__shadow;
+			@include heroSection.preview-shadow("blue__theme");
+		}
+		&--green__theme {
+			@extend .preview__shadow;
+			@include heroSection.preview-shadow("green__theme");
+		}
+		&--purple__theme {
+			@extend .preview__shadow;
+			@include heroSection.preview-shadow("purple__theme");
+		}
 	}
 
-	.preview__shadow__blue__theme {
-		@include heroSection.preview__shadow("blue__theme");
-	}
+	&__content {
+		width: 300px;
+		border: 1.5px solid #17a2b8;
+		padding: 15px;
+		position: relative;
 
-	.preview__shadow__green__theme {
-		@include heroSection.preview__shadow("green__theme");
-	}
+		@media screen and (max-width: $large-desktop-breakpoint) {
+			width: 285px;
+			margin-bottom: 50px;
+		}
 
-	.preview__shadow__purple__theme {
-		@include heroSection.preview__shadow("purple__theme");
-	}
+		h3 {
+			padding: 0.7em 0;
+		}
 
-	.preview__content__light__theme {
-		@include heroSection.preview__content("light__theme");
-	}
+		p {
+			padding: 1em 0;
+		}
 
-	.preview__content__blue__theme {
-		@include heroSection.preview__content("blue__theme");
-	}
+		&--light__theme {
+			@extend .preview__content;
+			@include heroSection.preview-content("light__theme");
+		}
+		&--blue__theme {
+			@extend .preview__content;
+			@include heroSection.preview-content("blue__theme");
+		}
+		&--green__theme {
+			@extend .preview__content;
+			@include heroSection.preview-content("green__theme");
+		}
+		&--purple__theme {
+			@extend .preview__content;
+			@include heroSection.preview-content("purple__theme");
+		}
 
-	.preview__content__green__theme {
-		@include heroSection.preview__content("green__theme");
-	}
+		&__corner {
+			position: absolute;
+			width: 7px;
+			height: 7px;
+			border-radius: 50%;
+			border: 1.5px solid #17a2b8;
 
-	.preview__content__purple__theme {
-		@include heroSection.preview__content("purple__theme");
-	}
+			&--top__left {
+				@extend .preview__content__corner;
+				top: -5px;
+				left: -5px;
+			}
 
-	.preview__corner__light__theme {
-		@include heroSection.preview__corner("light__theme");
-	}
-	.preview__corner__blue__theme {
-		@include heroSection.preview__corner("blue__theme");
-	}
-	.preview__corner__green__theme {
-		@include heroSection.preview__corner("green__theme");
-	}
-	.preview__corner__purple__theme {
-		@include heroSection.preview__corner("purple__theme");
-	}
+			&--top__right {
+				@extend .preview__content__corner;
+				top: -5px;
+				right: -5px;
+			}
 
-	.preview__corner__top__left {
-		top: -5px;
-		left: -5px;
-	}
-	.preview__corner__top__right {
-		top: -5px;
-		right: -5px;
-	}
-	.preview__corner__bottom__right {
-		bottom: -5px;
-		right: -5px;
-	}
-	.preview__corner__bottom__left {
-		bottom: -5px;
-		left: -5px;
+			&--bottom__right {
+				@extend .preview__content__corner;
+				bottom: -5px;
+				right: -5px;
+			}
+
+			&--bottom__left {
+				@extend .preview__content__corner;
+				bottom: -5px;
+				left: -5px;
+			}
+		}
+
+		&__corner {
+			&--light__theme {
+				@include heroSection.preview-corner("light__theme");
+			}
+			&--blue__theme {
+				@include heroSection.preview-corner("blue__theme");
+			}
+			&--green__theme {
+				@include heroSection.preview-corner("green__theme");
+			}
+			&--purple__theme {
+				@include heroSection.preview-corner("purple__theme");
+			}
+		}
 	}
 }
