--- a/components/heroSection/scss/TrafficLights.module.scss
+++ b/components/heroSection/scss/TrafficLights.module.scss
@@ -1,26 +1,31 @@
 @use "../../../scss/mixins" as globalMixins;
 
-.traffic__lights {
+.hero__section__content__nav__traffic__lights {
 	display: flex;
 	padding: 10px;
 
-	.traffic__lights__dots {
+	&__dots {
 		background-color: black;
 		height: 15px;
 		width: 15px;
 		border-radius: 50%;
 		margin: 5px;
 
-		@include globalMixins.box__shadow;
-	}
+		@include globalMixins.box-shadow;
 
-	.traffic__lights__dots__red {
-		background-color: #fc6058;
-	}
-	.traffic__lights__dots__yellow {
-		background-color: #fec02f;
-	}
-	.traffic__lights__dots__green {
-		background-color: #2aca3e;
+		&--red {
+			@extend .hero__section__content__nav__traffic__lights__dots;
+			background-color: #fc6058;
+		}
+
+		&--yellow {
+			@extend .hero__section__content__nav__traffic__lights__dots;
+			background-color: #fec02f;
+		}
+
+		&--green {
+			@extend .hero__section__content__nav__traffic__lights__dots;
+			background-color: #2aca3e;
+		}
 	}
 }
