--- a/components/aboutMeSection/scss/SocialLinks.module.scss
+++ b/components/aboutMeSection/scss/SocialLinks.module.scss
@@ -1,6 +1,6 @@
 @import "../../../scss/variables/breakpoints";
 
-.about__me__content__social__links {
+.content__social__links {
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
