--- a/components/contactSection/scss/_mixins.scss
+++ b/components/contactSection/scss/_mixins.scss
@@ -1,7 +1,7 @@
 @use "sass:map";
 @import "../../../scss/variables/colors";
 
-@mixin contact__section($themeName) {
+@mixin contact-section($themeName) {
 	background-color: map.get($secondaryColor, $themeName);
 
 	h3 {
@@ -9,11 +9,11 @@
 	}
 }
 
-@mixin content__section__form__label($themeName) {
+@mixin content-section-form-label($themeName) {
 	color: map.get($secondaryText, $themeName);
 }
 
-@mixin content__section__form__btn($themeName) {
+@mixin content-section-form-btn($themeName) {
 	background-color: map.get($buttonColor, $themeName);
 	&:hover {
 		background-color: map.get($themeDotBorder, $themeName);
