--- a/components/projectSection/scss/ProjectDetailsDescription.module.scss
+++ b/components/projectSection/scss/ProjectDetailsDescription.module.scss
@@ -1,27 +1,29 @@
 @import "../../../scss/variables/breakpoints";
 
-.project__details__description__text {
-	padding: 1em 0;
-	line-height: 1.7em;
+.project__details__description {
+	&__text {
+		padding: 1em 0;
+		line-height: 1.7em;
 
-	@media screen and (max-width: $large-desktop-breakpoint) {
-		padding: 0;
-		margin: 1em 0;
+		@media screen and (max-width: $large-desktop-breakpoint) {
+			padding: 0;
+			margin: 1em 0;
+		}
 	}
-}
 
-.project__details__description__tech__stack {
-	padding-bottom: 1em;
-}
-
-.project__details__description__show__details {
-	@media screen and (max-width: $large-desktop-breakpoint) {
-		display: block;
+	&__tech__stack {
+		padding-bottom: 1em;
 	}
-}
 
-.project__details__description__hide__details {
-	@media screen and (max-width: $large-desktop-breakpoint) {
-		display: none;
+	&__show__details {
+		@media screen and (max-width: $large-desktop-breakpoint) {
+			display: block;
+		}
+	}
+
+	&__hide__details {
+		@media screen and (max-width: $large-desktop-breakpoint) {
+			display: none;
+		}
 	}
 }
