--- a/components/projectSection/scss/ProjectsSection.module.scss
+++ b/components/projectSection/scss/ProjectsSection.module.scss
@@ -1,41 +1,46 @@
 @use "mixins" as projectsSection;
 @import "../../../scss/variables/breakpoints";
 
-.projects {
-	display: flex;
-	flex-direction: column;
-	justify-content: space-evenly;
-	align-items: center;
-	width: 100%;
-	height: 100vh;
-	margin: 0 auto;
-
-	@media screen and (max-width: $large-desktop-breakpoint) {
-		width: 95%;
-		height: 100%;
-		overflow-x: hidden;
+.projects__section {
+	&--light__theme {
+		@include projectsSection.projects-section("light__theme");
 	}
 
-	@media screen and (min-width: 1800px) {
-		width: 70%;
+	&--blue__theme {
+		@include projectsSection.projects-section("blue__theme");
 	}
 
-	h3 {
+	&--green__theme {
+		@include projectsSection.projects-section("green__theme");
+	}
+
+	&--purple__theme {
+		@include projectsSection.projects-section("purple__theme");
+	}
+
+	&__content {
+		display: flex;
+		flex-direction: column;
+		justify-content: space-evenly;
+		align-items: center;
+		width: 100%;
+		height: 100vh;
+		margin: 0 auto;
+
 		@media screen and (max-width: $large-desktop-breakpoint) {
-			margin: 2rem 0;
+			width: 95%;
+			height: 100%;
+			overflow-x: hidden;
+		}
+
+		@media screen and (min-width: 1800px) {
+			width: 70%;
+		}
+
+		h3 {
+			@media screen and (max-width: $large-desktop-breakpoint) {
+				margin: 2rem 0;
+			}
 		}
 	}
-}
-
-.projects__section__light__theme {
-	@include projectsSection.projects__section("light__theme");
-}
-.projects__section__blue__theme {
-	@include projectsSection.projects__section("blue__theme");
-}
-.projects__section__green__theme {
-	@include projectsSection.projects__section("green__theme");
-}
-.projects__section__purple__theme {
-	@include projectsSection.projects__section("purple__theme");
 }
