--- a/components/heroSection/scss/HeroSection.module.scss
+++ b/components/heroSection/scss/HeroSection.module.scss
@@ -23,7 +23,7 @@
 		margin: 0 auto;
 		@media screen and (max-width: $large-desktop-breakpoint) {
 			width: 95%;
-			height: 100%;
+			// height: 100%;
 			overflow-x: hidden;
 		}
 
@@ -32,10 +32,10 @@
 		}
 
 		&__greeting {
-			display: grid;
-			text-align: center;
-			align-content: center;
-			min-height: 10em;
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			padding: 3em;
 		}
 	}
 }
