--- a/components/projectSection/scss/ProjectsSection.module.scss
+++ b/components/projectSection/scss/ProjectsSection.module.scss
@@ -2,19 +2,25 @@
 @import "../../../scss/variables/breakpoints";
 
 .projects__section {
+	padding: 4em 0;
+
 	&--light__theme {
+		@extend .projects__section;
 		@include projectsSection.projects-section("light__theme");
 	}
 
 	&--blue__theme {
+		@extend .projects__section;
 		@include projectsSection.projects-section("blue__theme");
 	}
 
 	&--green__theme {
+		@extend .projects__section;
 		@include projectsSection.projects-section("green__theme");
 	}
 
 	&--purple__theme {
+		@extend .projects__section;
 		@include projectsSection.projects-section("purple__theme");
 	}
 
@@ -24,12 +30,12 @@
 		justify-content: space-evenly;
 		align-items: center;
 		width: 100%;
-		height: 100vh;
+		// height: 100vh;
 		margin: 0 auto;
 
 		@media screen and (max-width: $large-desktop-breakpoint) {
 			width: 95%;
-			height: 100%;
+			// height: 100%;
 			overflow-x: hidden;
 		}
 
