--- a/components/aboutMeSection/scss/AboutMeInfo.module.scss
+++ b/components/aboutMeSection/scss/AboutMeInfo.module.scss
@@ -1,10 +1,9 @@
 .content__info {
-	h4 {
-		padding-bottom: 0.5em 0;
+	p {
+		padding: 0.5em 0;
 	}
 
-	p {
-		padding: 0.7em 0;
-		line-height: 1.7em;
+	a {
+		padding-top: 0;
 	}
 }
