--- a/components/aboutMeSection/scss/AboutMeSection.module.scss
+++ b/components/aboutMeSection/scss/AboutMeSection.module.scss
@@ -2,27 +2,32 @@
 @import "../../../scss/variables/breakpoints";
 
 .about__me__section {
+	padding: 3em 0;
+
 	&--light__theme {
+		@extend .about__me__section;
 		@include aboutMeSection.about-me-section("light__theme");
 	}
 
 	&--blue__theme {
+		@extend .about__me__section;
 		@include aboutMeSection.about-me-section("blue__theme");
 	}
 
 	&--green__theme {
+		@extend .about__me__section;
 		@include aboutMeSection.about-me-section("green__theme");
 	}
 
 	&--purple__theme {
+		@extend .about__me__section;
 		@include aboutMeSection.about-me-section("purple__theme");
 	}
 
 	&__content {
 		display: grid;
 		grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
-		padding: 50px 0;
-
+		column-gap: 2em;
 		margin: 0 auto;
 
 		@media screen and (max-width: $large-desktop-breakpoint) {
