--- a/components/aboutMeSection/scss/SocialLinks.module.scss
+++ b/components/aboutMeSection/scss/SocialLinks.module.scss
@@ -3,9 +3,8 @@
 .content__social__links {
 	display: flex;
 	flex-direction: column;
-	justify-content: space-between;
+	gap: 4em;
 	text-align: center;
-	padding-bottom: 4em;
 
 	@media screen and (max-width: $large-desktop-breakpoint) {
 		padding-bottom: 0;
@@ -15,24 +14,25 @@
 		align-items: center;
 	}
 
-	&__image {
-		display: block;
+	&__image__wrapper {
+		position: relative;
 		width: 100%;
-		object-fit: cover;
-
-		@media screen and (min-width: 1800px) {
-			width: 600px;
-		}
+		height: 350px;
+		margin: 1em;
 	}
 
-	h3 {
-		padding-top: 2em;
+	&__image {
+		object-fit: cover;
+	}
+
+	div > h3 {
+		margin-bottom: 1em;
 	}
 
 	a {
 		letter-spacing: 2px;
-		line-height: 2em;
-		font-weight: bold;
-		margin: 2em 0;
+		// line-height: 2em;
+		font-weight: 600;
+		padding: 0;
 	}
 }
