--- a/components/heroSection/scss/HeroContentRight.module.scss
+++ b/components/heroSection/scss/HeroContentRight.module.scss
@@ -5,11 +5,10 @@
 	grid-area: rightColumn;
 	display: grid;
 	align-content: center;
-	padding: 50px 0;
+	padding: 6em 0;
 
 	@media screen and (max-width: 800px) {
 		justify-content: center;
-		padding: 0;
 	}
 
 	&__shadow {
@@ -47,16 +46,12 @@
 	&__content {
 		width: 300px;
 		border: 1.5px solid #17a2b8;
-		padding: 15px;
+		padding: 1em;
 		position: relative;
 
 		@media screen and (max-width: $large-desktop-breakpoint) {
 			width: 285px;
 			margin-bottom: 50px;
-		}
-
-		h3 {
-			padding: 0.7em 0;
 		}
 
 		p {
