--- a/components/projectSection/scss/Carousel.module.scss
+++ b/components/projectSection/scss/Carousel.module.scss
@@ -6,7 +6,7 @@
 	justify-content: space-around;
 	align-items: center;
 	width: 100%;
-	margin-bottom: 2em;
+	margin: 3em 0 6em 0;
 
 	&--light__theme {
 		@extend .swiper;
@@ -41,6 +41,21 @@
 			margin-bottom: 2em;
 			grid-template-columns: 1fr;
 		}
+	}
+
+	.swiper__pagination {
+		bottom: -6em !important;
+
+		span {
+			padding: 0;
+			width: 24px;
+			height: 24px;
+		}
+	}
+
+	.swiper__pagination__bullet__active {
+		background-color: #17a2b8;
+		opacity: 100%;
 	}
 
 	.swiper__chevron__next,
