--- a/components/projectSection/scss/Project.module.scss
+++ b/components/projectSection/scss/Project.module.scss
@@ -22,17 +22,14 @@
 			}
 		}
 
+		&__image__wrapper {
+			position: relative;
+			width: 100%;
+			height: 310px;
+		}
+
 		&__image {
-			display: flex;
-			justify-content: center;
-
-			img {
-				width: 100%;
-
-				@media screen and (max-width: $large-desktop-breakpoint) {
-					width: 100%;
-				}
-			}
+			object-fit: contain;
 		}
 	}
 
