--- a/components/contactSection/scss/ContactSection.module.scss
+++ b/components/contactSection/scss/ContactSection.module.scss
@@ -2,13 +2,14 @@
 @import "../../../scss/variables/breakpoints";
 
 .contact__section {
+	padding: 3em 0;
+
 	@media screen and (max-width: $large-desktop-breakpoint) {
 		overflow-x: hidden;
 	}
 
 	h3 {
 		text-align: center;
-		padding: 2em;
 	}
 
 	&--light__theme {
