--- a/components/heroSection/scss/HeroContent.module.scss
+++ b/components/heroSection/scss/HeroContent.module.scss
@@ -1,4 +1,3 @@
-@use "sass:map";
 @use "../../../scss/mixins" as globalMixins;
 @use "./mixins" as heroSection;
 @use "../../../scss/variables/colors";
@@ -66,6 +65,10 @@
 		&--purple__theme {
 			@extend .hero__section__content__nav;
 			@include heroSection.hero-content-nav("purple__theme");
+		}
+
+		a {
+			padding: 0;
 		}
 	}
 }
