--- a/components/heroSection/scss/HeroNavigation.module.scss
+++ b/components/heroSection/scss/HeroNavigation.module.scss
@@ -1,9 +1,9 @@
 .nav__links {
 	margin: 0;
-	padding: 10px;
+	padding: 0.625rem;
 
 	li {
 		display: inline-block;
-		margin: 0 5px;
+		margin: 0 0.3125rem;
 	}
 }
