--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -43,7 +43,7 @@
 		font-size: 1em;
 		font-family: "Roboto Mono", monospace;
 		line-height: 1.5rem;
-		padding: 1em 0;
+		padding: 1rem 0;
 	}
 
 	// Global link styles
@@ -53,7 +53,6 @@
 		color: #17a2b8;
 		font-size: 1.5em;
 		font-family: "Roboto Mono", monospace;
-		padding: 0.5em 0;
 	}
 
 	// Global unordered list styles
