--- a/scss/variables/_colors.scss
+++ b/scss/variables/_colors.scss
@@ -1,12 +1,12 @@
 // Background Colors
-$mainColor: (
+$mainBackgroundColor: (
 	"light__theme": #eaeaea,
 	"blue__theme": #15202b,
 	"green__theme": #606b56,
 	"purple__theme": #46344e,
 );
 
-$secondaryColor: (
+$secondaryBackgroundColor: (
 	"light__theme": white,
 	"blue__theme": #192734,
 	"green__theme": #515a48,
