--- a/components/aboutMeSection/scss/Skills.module.scss
+++ b/components/aboutMeSection/scss/Skills.module.scss
@@ -3,11 +3,11 @@
 .content__info__skills {
 	display: grid;
 	grid-template-columns: repeat(2, 1fr);
-	padding: 1em 0;
+	padding: 1rem 0;
 
 	li {
 		text-align: center;
-		padding: 0.5em 0;
+		padding: 0.5rem 0;
 	}
 
 	&--light__theme {
