--- a/components/aboutMeSection/scss/SocialLinks.module.scss
+++ b/components/aboutMeSection/scss/SocialLinks.module.scss
@@ -3,7 +3,7 @@
 .content__social__links {
 	display: flex;
 	flex-direction: column;
-	gap: 4em;
+	gap: 4rem;
 	text-align: center;
 
 	@media screen and (max-width: $large-desktop-breakpoint) {
@@ -18,7 +18,11 @@
 		position: relative;
 		width: 100%;
 		height: 350px;
-		margin: 1em;
+		margin: 1rem;
+
+		@media screen and (max-width: $large-desktop-breakpoint) {
+			margin: 0;
+		}
 	}
 
 	&__image {
@@ -26,12 +30,11 @@
 	}
 
 	div > h3 {
-		margin-bottom: 1em;
+		margin-bottom: 1rem;
 	}
 
 	a {
 		letter-spacing: 2px;
-		// line-height: 2em;
 		font-weight: 600;
 		padding: 0;
 	}
