--- a/components/heroSection/scss/ThemeOptions.module.scss
+++ b/components/heroSection/scss/ThemeOptions.module.scss
@@ -6,7 +6,7 @@
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	height: 6em;
+	height: 6rem;
 
 	&--light {
 		background-color: #fff;
