--- a/components/aboutMeSection/scss/SocialLinks.module.scss
+++ b/components/aboutMeSection/scss/SocialLinks.module.scss
@@ -3,25 +3,17 @@
 .content__social__links {
 	display: flex;
 	flex-direction: column;
+	align-items: center;
 	gap: 4rem;
 	text-align: center;
-
-	@media screen and (max-width: $large-desktop-breakpoint) {
-		padding-bottom: 0;
-	}
-
-	@media screen and (min-width: 1800px) {
-		align-items: center;
-	}
 
 	&__image__wrapper {
 		position: relative;
 		width: 100%;
 		height: 350px;
-		margin: 1rem;
 
-		@media screen and (max-width: $large-desktop-breakpoint) {
-			margin: 0;
+		@media screen and (min-width: $mobile-breakpoint) {
+			margin: 1rem;
 		}
 	}
 
