--- a/components/projectSection/scss/Carousel.module.scss
+++ b/components/projectSection/scss/Carousel.module.scss
@@ -30,16 +30,14 @@
 
 	&__slide {
 		display: grid;
-		grid-template-columns: 1fr 1fr;
+		grid-template-columns: 1fr;
 		justify-content: center;
 		align-items: center;
-		padding: 2.5em;
 		box-sizing: border-box;
 
-		@media screen and (max-width: $large-desktop-breakpoint) {
-			padding: 0;
-			margin-bottom: 2em;
-			grid-template-columns: 1fr;
+		@media screen and (min-width: $large-desktop-breakpoint) {
+			padding: 2.5rem;
+			grid-template-columns: 1fr 1fr;
 		}
 	}
 
