--- a/components/projectSection/scss/ProjectsSection.module.scss
+++ b/components/projectSection/scss/ProjectsSection.module.scss
@@ -29,15 +29,10 @@
 		flex-direction: column;
 		justify-content: space-evenly;
 		align-items: center;
-		width: 100%;
-		margin: 0 auto;
+		width: 90%;
+		margin-inline: auto;
 
-		@media screen and (max-width: $large-desktop-breakpoint) {
-			width: 95%;
-			overflow-x: hidden;
-		}
-
-		@media screen and (min-width: 1800px) {
+		@media screen and (min-width: $large-desktop-breakpoint) {
 			width: 70%;
 		}
 
